# eco-vehicle-app

./: .env.example  .env.template  .gitignore  CMakeLists.txt  Dockerfile  Procfile  README.md  analysis_report.aux  analysis_report.out  analysis_report.tex  analysis_report.toc  api_test.py  app_builder.py  completion_plan.md  config.json  demo.py  demo_dashboard.py  deploy.sh  deploy_model.py  example_model.json  example_model.yaml  generate_diagrams.py  grant_proposal.aux  grant_proposal.out  grant_proposal.tex  grant_proposal.toc  ibm_cloud_config.yml  integrated_demo.py  manifest.yml  model_based_implementation.md  monitoring_dashboard.py  netlify.toml  power_mode_test.py  pytest.ini  render.yaml  requirements-autodesk.txt  requirements-cad.txt  requirements-dev.txt  requirements-forge.txt  requirements-model.txt  (+15 more)
.github/workflows/: ci_cd.yml
config/: advanced_domain_knowledge.yaml  advanced_requirement_templates.yaml  autodesk_config.json  bot_scheduler.yaml  complex_systems_knowledge.yaml  complex_systems_templates.yaml  credentials.env.enc  credentials.env.template  domain_knowledge_bases.yaml  ibm_config.json.template  ibm_dns_config.json  recycling_config.json  requirement_templates.yaml  requirements_bot_config.yaml  systems_engineering_knowledge.yaml  systems_engineering_templates.yaml  vehicle_config.json
config/monitoring/: dashboard_config.json  monitoring_config.yaml
config/security/: cis_security_rules.json
cpp/: CMakeLists.txt  build.sh
cpp/resources/: resources.qrc
cpp/resources/i18n/: app_en.ts
cpp/resources/styles/: common.qss  dark.qss  light.qss
cpp/resources/voices/: metadata.json
cpp/scripts/: setup_autodesk.sh
cpp/src/: CMakeLists.txt  main.cpp
cpp/src/analysis/: CMakeLists.txt
cpp/src/analysis/include/: ModelAnalyzer.hpp
cpp/src/autodesk/: CMakeLists.txt
cpp/src/autodesk/include/: AutodeskIntegration.hpp
cpp/src/core/: CMakeLists.txt
cpp/src/core/include/: Config.hpp  Logger.hpp  QABot.hpp  VoiceAssistant.hpp
cpp/src/core/include/core/: Config.hpp
cpp/src/core/src/: Config.cpp  Logger.cpp  VoiceAssistant.cpp
cpp/src/design/include/: DesignSystem.hpp
cpp/src/fusion360/include/: Fusion360Integration.hpp  ModelViewer.hpp
cpp/src/gui/forms/: FlowModelingForm.ui  ModelRepositoryForm.ui
cpp/src/gui/include/: BackupTab.hpp  DashboardSystem.hpp  FlowModelingTab.hpp  MLModelTab.hpp  MainWindow.hpp  ModelRepositoryTab.hpp  MonitoringTab.hpp  RequirementsTab.hpp  SecurityTab.hpp  VehicleVisualizerTab.hpp
cpp/src/gui/src/: MainWindow.cpp  ModelRepositoryTab.cpp  RequirementsTab.cpp  VehicleVisualizerTab.cpp
cpp/src/modeling/include/: FlowModelingSystem.hpp  ModelMetadata.hpp  ModelTreeModel.hpp
cpp/src/modeling/src/: ModelTreeModel.cpp
cpp/src/monitoring/include/monitoring/: SystemMonitor.hpp
cpp/src/monitoring/src/: SystemMonitor.cpp
cpp/src/repository/include/: ModelRepository.hpp
cpp/src/requirements/include/: RequirementsManager.hpp
cpp/src/visualization/include/: VisualizationEngine.hpp
cpp/src/visualization/include/visualization/: DashboardWidget.hpp
data/ai_patterns/: optimization_bot_patterns_2025-02-24T15:22:09.063755.json  optimization_bot_patterns_2025-02-24T15:30:24.535069.json  optimization_bot_patterns_2025-02-25T04:00:30.107802.json  optimization_bot_patterns_2025-02-26T04:00:55.881809.json  requirements_bot_patterns_2025-02-24T15:22:09.093249.json  requirements_bot_patterns_2025-02-24T15:30:24.561050.json  requirements_bot_patterns_2025-02-25T03:00:22.145768.json  requirements_bot_patterns_2025-02-26T03:00:47.455629.json  validation_bot_patterns_2025-02-24T15:22:09.085536.json  validation_bot_patterns_2025-02-24T15:30:24.543789.json  validation_bot_patterns_2025-02-24T16:00:31.067072.json  validation_bot_patterns_2025-02-24T17:00:34.850224.json  validation_bot_patterns_2025-02-24T18:00:38.546160.json  validation_bot_patterns_2025-02-24T19:00:42.339731.json  validation_bot_patterns_2025-02-24T20:00:46.313542.json  validation_bot_patterns_2025-02-24T21:00:50.294807.json  validation_bot_patterns_2025-02-24T22:00:53.506151.json  validation_bot_patterns_2025-02-25T00:00:01.375197.json  validation_bot_patterns_2025-02-25T01:00:06.599361.json  validation_bot_patterns_2025-02-25T02:00:14.890425.json  validation_bot_patterns_2025-02-25T03:00:22.194203.json  validation_bot_patterns_2025-02-25T04:00:30.247147.json  validation_bot_patterns_2025-02-25T05:00:35.107274.json  validation_bot_patterns_2025-02-25T06:00:10.155621.json  validation_bot_patterns_2025-02-25T07:00:13.922453.json  validation_bot_patterns_2025-02-25T08:00:17.789689.json  validation_bot_patterns_2025-02-25T09:00:21.807362.json  validation_bot_patterns_2025-02-25T10:00:25.155837.json  validation_bot_patterns_2025-02-25T13:00:09.530807.json  validation_bot_patterns_2025-02-25T14:00:15.715394.json  validation_bot_patterns_2025-02-25T15:00:19.878169.json  validation_bot_patterns_2025-02-25T16:00:25.312083.json  validation_bot_patterns_2025-02-25T17:00:32.671800.json  validation_bot_patterns_2025-02-25T18:00:39.931522.json  validation_bot_patterns_2025-02-25T19:00:46.990887.json  (+25 more)
data/hardware/: motherboard_database.json
docs/: DEVELOPMENT.md  REQUIREMENTS.md  disaster_recovery_plan.md  eco_vehicle_architecture.drawio  eco_vehicle_sow.md  ibm_dns_setup_guide.md  implementation_timeline.md  model_based_design.md  model_based_development_guide.md  modeling_system.md  namecheap_dns_guide.md  qa_plan.md  resource_allocation.md  software_completion_analysis_2025.md  system_architecture.md  user_interaction_guide.md
eco_vehicle_modeling.egg-info/: SOURCES.txt  requires.txt
examples/: motherboard_analysis_demo.py  uml_example.py
integration/: unified_launcher.py
scripts/: data_migration.py  init_databases.py  install_ibm_plugins.sh  start_services.sh  upload_model.py
src/: app.py  main.cpp
static/: index.html
tests/: README.md  conftest.py  requirements-test.txt  test_deployment.py
tests_env/: test_air_quality.py  test_dashboard.py  test_system_monitor.py  test_visualization.py
viewer/: index.html  serve.py
web/: app.py
(+330 files in other folders)
